--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
+<head><style>
+  body {
+    background: #222;
+    color: #eee;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    padding-top: 100px;
+  }
+  h1 {
+    font-size: 4rem;
+    margin-bottom: 0;
+  }
+  p {
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    color: #bbb;
+  }
+</style>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Badi and Baddies</title>
