--- a/index.html
+++ b/index.html
@@ -28,3 +28,74 @@
   <p>Cool olan biziz. Dostluk başka, biz başka!</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Badi and Baddies - Demo E-Ticaret</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 20px;
+    background: #f0f0f0;
+    color: #333;
+  }
+  h1 {
+    text-align: center;
+  }
+  .products {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .product {
+    background: white;
+    border-radius: 6px;
+    padding: 15px;
+    width: 200px;
+    box-shadow: 0 0 5px #aaa;
+    text-align: center;
+  }
+  .product img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+  .product button {
+    margin-top: 10px;
+    padding: 8px 12px;
+    background: #0077cc;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  .cart {
+    margin-top: 30px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background: white;
+    padding: 15px;
+    border-radius: 6px;
+    box-shadow: 0 0 5px #aaa;
+  }
+  .cart h2 {
+    margin-top: 0;
+  }
+  .cart-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 0;
+    border-bottom: 1px solid #ddd;
+  }
+  .cart-item:last-child {
+    border-bottom: none;
+  }
+  .cart-total {
+    font-weight: bold;
+    text-align: right;
+    margin-top:
