--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h1>Badi and Baddies</h1>
   <p>Cool olan biziz. Dostluk başka, biz başka!</p>
 </body>
-</html>
+</html
 <!DOCTYPE html>
 <html lang="tr">
 <head>
